--- a/notebooks/test_inputs.ipynb
+++ b/notebooks/test_inputs.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "substantial-ghana",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash import Input, Output, Dash\n",
+    "from dash import Input, Output, Dash, State\n",
     "import dash_material_components as dmc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "floral-upgrade",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "documented-raise",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2a900805",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b43ef36b-4e3e-4667-b8ee-262e98db2d0d",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2091a0c4",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2d08930d",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ef526880",
    "metadata": {},
    "outputs": [],
@@ -359,7 +359,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "b83c3eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff0edf3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_module_definitions_from_file(file_path: str):\n",
+    "    \"\"\"\n",
+    "    Loads the module definitions from a text file in JSON format.\n",
+    "    \"\"\"\n",
+    "    import json\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        return json.load(file)\n",
+    "    \n",
+    "code_editor = dmc.CodeEditor(\n",
+    "        id='code-editor',\n",
+    "        value='import pandas as pd\\n\\ndf = pd.DataFrame()\\ndf.head()',\n",
+    "        moduleDefinitions=load_module_definitions_from_file('autocomplete.json')\n",
+    "    )\n",
+    "\n",
+    "button_code_editor = dmc.Button(\n",
+    "    id=\"button-code-editor\",\n",
+    "    text=\"Submit\",\n",
+    "    nClicks=0,\n",
+    ")\n",
+    "\n",
+    "text_code_editor = dmc.Typography(\n",
+    "    id=\"text-code-editor\",\n",
+    "    text=\"Content...\",\n",
+    "    variant=\"body2\",\n",
+    ")\n",
+    "\n",
+    "box_code_editor = dmc.Box(children=[code_editor, button_code_editor, text_code_editor])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "pleased-invasion",
    "metadata": {},
    "outputs": [],
@@ -367,7 +411,7 @@
     "# Dashboard layout\n",
     "\n",
     "tab = dmc.Tab(\n",
-    "    children=[box, box_2, box_3, box_4, box_5, box_6, box_7],\n",
+    "    children=[box, box_2, box_3, box_4, box_5, box_6, box_7, box_code_editor],\n",
     "    tabs=[\n",
     "        {\"label\": \"Toggle\"},\n",
     "        {\"label\": \"Dropdown\"},\n",
@@ -376,6 +420,7 @@
     "        {\"label\": \"Text input\"},\n",
     "        {\"label\": \"Autocomplete\"},\n",
     "        {\"label\": \"Button\"},\n",
+    "        {\"label\": \"CodeEditor\"},\n",
     "    ]\n",
     ")\n",
     "section = dmc.Section(\n",
@@ -392,32 +437,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "extra-kenya",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://0.0.0.0:8001/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2d6330d50>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dash app\n",
     "\n",
@@ -543,6 +566,14 @@
     "    return f\"{n_clicks} clicks\"\n",
     "\n",
     "\n",
+    "@app.callback(\n",
+    "    Output(component_id='text-code-editor', component_property='text'),\n",
+    "    State(component_id='code-editor', component_property='value'),\n",
+    "    Input(component_id='button-code-editor', component_property='nClicks'),\n",
+    ")\n",
+    "def update_code_editor(value, nClicks):\n",
+    "    return value\n",
+    "\n",
     "app.run_server(mode=\"inline\", host=\"0.0.0.0\", port=8001, debug=True)"
    ]
   },
@@ -557,7 +588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -571,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
